workloads/website/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
  namespace: default
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app: glob:master-*
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: app
        image: cloudnativenordics/website:master-45724bf
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
