workloads/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: website
